--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,12 +1,14 @@
 wdtg-log-message = Enemy units won't exist no more!
 
 wdtg-category = Additional Settings
+setting.wdtg-override.name = Show Override Menu
+setting.wdtg-override.description = Shows a menu with one-time setting overrides when loading a world
 setting.wdtg-waves.name = Affect Waves
 setting.wdtg-waves.description = Disables waves on attack sectors, applies wave offset
 setting.wdtg-wave-offset.name = Final Wave Offset
 setting.wdtg-wave-offset.description = Adjusts the amount of waves before the sector is captured
 setting.wdtg-refresh-rate.name = Refresh Rate
-setting.wdtg-refresh-rate.description = Sets the update rate for some methods\nRestart required to apply changes
+setting.wdtg-refresh-rate.description = Sets the update rate for some methods\n[scarlet]Restart required to apply changes
 setting.wdtg-mode.name = Disable Enemies
 setting.wdtg-mode.description = Disables enemy unit factories, kills existing enemy units every refresh
 setting.wdtg-buttons.name = Enable Capturing
@@ -17,6 +19,7 @@ wdtg-cap-block = Capture Blocks
 wdtg-cap-all = Capture Everything
 wdtg-team-selector = Team Selector
 wdtg-dialog = Select Team
+wdtg-dialog-override = Override Settings
 
 wdtg-capture-message = Captured
 wdtg-capture-message-blocks = Buildings
@@ -24,6 +27,8 @@ wdtg-capture-message-and = And
 wdtg-capture-message-units = Units
 wdtg-capture-message-from = From
 wdtg-capture-message-extra = All Teams
+wdtg-capture-message-empty = Nothing to capture...
+wdtg-select-message = Currently Selected:
 
 wdtg-client-warn = You aren't the host, u moron :3
 
