i forgor to resize a button

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,6 +29,7 @@ wdtg-capture-message-from = From
 wdtg-capture-message-extra = All Teams
 wdtg-capture-message-empty = Nothing to capture...
 wdtg-select-message = Currently Selected:
+wdtg-select-message-any = <Any>
 
 wdtg-client-warn = You aren't the host, u moron :3
 
