better block capturing

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -32,5 +32,6 @@ wdtg-select-message = Currently Selected:
 wdtg-select-message-any = <Any>
 
 wdtg-client-warn = You aren't the host, u moron :3
+wdtg-pvp-warn = PvP detected\nUnfair Features disabled!
 
 
