client-client networking

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -13,6 +13,8 @@ setting.wdtg-mode.name = Disable Enemies
 setting.wdtg-mode.description = Disables enemy unit factories, kills existing enemy units every refresh
 setting.wdtg-buttons.name = Enable Capturing
 setting.wdtg-buttons.description = Shows buttons to capture enemy content
+setting.wdtg-direct.name = Allow Direct Execution
+setting.wdtg-direct.description = Allows players with admin to use capture without validation by host
 
 wdtg-cap-unit = Capture Units
 wdtg-cap-block = Capture Blocks
@@ -21,6 +23,8 @@ wdtg-team-selector = Team Selector
 wdtg-dialog = Select Team
 wdtg-dialog-override = Override Settings
 
+# These words are used to build the sentence on runtime
+# Translate them as a whole sentence (to get the context right)
 wdtg-capture-message = Captured
 wdtg-capture-message-blocks = Buildings
 wdtg-capture-message-and = And
@@ -28,10 +32,14 @@ wdtg-capture-message-units = Units
 wdtg-capture-message-from = From
 wdtg-capture-message-extra = All Teams
 wdtg-capture-message-empty = Nothing to capture...
+# <player> Requests To Capture <option> <wdtg-capture-message-from> <team>
+wdtg-capture-request = Requests To Capture
+wdtg-capture-request-sent = Sent capture request to the host!
+wdtg-capture-request-warn = Missing Permissions!
 wdtg-select-message = Currently Selected:
 wdtg-select-message-any = <Any>
 
-wdtg-client-warn = You aren't the host, u moron :3
+wdtg-vanilla-host-warn = The host does not appear to have the mod!
 wdtg-pvp-warn = PvP detected\nUnfair Features disabled!
 
 
